tests/errors/use_after_move.milo
// @error: use of moved variable 's'

fn consume(s: string): void {}

fn main(): i32 {
    let s: string = "hello"
    consume(s)
    consume(s)
    return 0
}
